syntax = "proto3";

package io.freezing.benchmark;

message BenchmarkRequest {
  int32 id = 1;
  int32 server_payload_size_bytes = 2;
  int32 server_work_iterations = 3;
  int32 server_processing_iterations = 4;
  bytes payload = 5;
}

message BenchmarkResponse {
  int32 id = 1;
  bytes payload = 2;
}

service BenchmarkService {
  rpc UnaryCall(BenchmarkRequest) returns (BenchmarkResponse) {}
  rpc StreamingCall(stream BenchmarkRequest) returns (stream BenchmarkResponse) {}
}